# gb_prototype

./: Cargo.toml  build.rs
shaders/: triangle.vert.glsl
src/: THOUGHTS.md  gl_backend.rs  main.rs  mesh.rs  renderer.rs  triangle.frag.glsl  triangle.vert.glsl
