[package]
name = "renderer"
version = "0.1.0"
authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.37.0"
log = "0.4.8"
toml = "0.4.8"
rand = "0.7.3"
file_logger = { git = "https://github.com/lambdaxymox/file-logger" }
lean_cgmath = { git = "https://github.com/lambdaxymox/lean-cgmath" }

[build-dependencies]
gl_generator = "0.14.0"

[profile.dev]
debug = true

[features]
build_for_install = []
